# library_management_system

./: .gitignore  CMakeLists.txt  README.md
data/: books.txt  users.txt
include/: Account.h  Book.h  Faculty.h  Librarian.h  Library.h  Student.h  User.h
src/: Account.cpp  Book.cpp  Faculty.cpp  Librarian.cpp  Library.cpp  Student.cpp  User.cpp  main.cpp
